tooling/nargo_cli/tests/snapshots/execution_success/overlapping_dep_and_mod/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[overlapping_dep_and_mod] Circuit output: 0x0b
